--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+  <p class="lead">Lo sentimos, la URL ingresada no existe o está señalando algo que fue aliminado y ya no existe. <a href="{{ site.baseurl }}/">Regresar al inicio</a> para tratar de encontrarlo de nuevo.</p>
 </div>
