--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: Página no encontrada"
 permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
+  <h1 class="page-title">404: Página no encontrada</h1>
   <p class="lead">Lo sentimos, la URL ingresada no existe o está señalando algo que fue aliminado y ya no existe. <a href="{{ site.baseurl }}/">Regresar al inicio</a> para tratar de encontrarlo de nuevo.</p>
 </div>
