--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ title: Home
 
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">Anteriores</a>
+    <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">Anteriores posts</a>
   {% else %}
-    <span class="pagination-item older">Anteriores</span>
+    <span class="pagination-item older">Anteriores posts</span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
